Fix sticky buttons overlapping Contao’s jump target bar

--- a/src/Resources/public/backend.css
+++ b/src/Resources/public/backend.css
@@ -9,6 +9,10 @@
     z-index: 3;
 }
 
+.jump-targets + #tl_buttons {
+    top: 32px;
+}
+
 /* Fix clashing background colors when an
 info field is inside a serp preview */
 .serp-preview:has(.tl_info) {
